--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "tsc --resolveJsonModule index.ts && node index.js"
+    "start": "yarn build && node build/index.js",
+    "build": "tsc --p tsconfig.json"
   },
   "dependencies": {
     "@uniswap/sdk-core": "^3.0.1",
